# collab-vm-server-1.2

./: .clang-format  .gitignore  .gitmodules  404.html  BUILDING.md  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Makefile  README.md  collab-vm-server.sln  index.html  mkdocs.yml  search.html  sitemap.xml  vcpkg.json
.github/workflows/: actions.yml  ci.yml  mkdocs.yml  server.yml  server_1604.yml  server_1804.yml
about/: index.html
api/: Arguments.cpp  Arguments.h  CMakeLists.txt  main.cpp
building/: index.html
cmake/: CollabVM.cmake  CompilerWarnings.cmake  GitTag.cmake  Policies.cmake  StandardProjectSettings.cmake
collab-vm-server/: collab-vm-server.vcxproj  collab-vm-server.vcxproj.filters  configure.ac
collab-vm-server/src/: AgentProtocol.h  Base64.h  Chat.h  CollabVM.cpp  CollabVM.h  CollabVMUser.h  GuacBroadcastSocket.cpp  GuacClient.h  GuacInstructionParser.cpp  GuacInstructionParser.h  GuacSocket.cpp  GuacSocket.h  GuacUser.h  GuacVNCClient.cpp  Main.cpp  Makefile.am  Makefile.am.alt  UploadInfo.h
core/: CMakeLists.txt  FundamentalTypes.h  PluginManager.cpp  PluginManager.h  VncHack.cpp  VncHack.h
core/util/: CommandLine.cpp  CommandLine.h
devguidelines/: index.html
doc/: collab-vm-server.1
docs/: about.md  building.md  devguidelines.md  index.md  usage.md
http_src/: index.html.in  main.css
http_src/admin/: admin.min.js  config.html  index.html
include/core/: FundamentalTypes.h  PluginAbi.h  PluginManager.h
include/plugin/: DatabasePlugin.h  PluginAPI.h  PluginAbi.h  VtFunction.h
include/websocket/: Client.h  ForwardDeclarations.h  Message.h  NetworkingTSCompatibility.h  Server.h
lib/asio-vm/: README.md
mk/: Makedefs  README.md  common.mk  cygwin.mkc  linux.mk  linux.mkc  termux.mkc  win32.mkc  win64.mkc  windows32.mk  windows64.mk
proto/: CMakeLists.txt
proto/http/: AsioImplementation.cpp  CMakeLists.txt  Client.cpp  Client.h  ForwardDeclarations.h  HttpSession.cpp  HttpUtils.h  Listener.cpp  Message.cpp  Message.h  NetworkingTSCompatibility.h  Server.cpp  Server.h  WebSocketClient.cpp  WebSocketMessage.cpp  WebSocketMessage.h
scripts/: build_site.sh  copy_dlls_cyg.sh  copy_dlls_mw.sh  copy_dlls_tmux.sh  grab_deps_cyg.sh  grab_deps_linux.sh  grab_deps_mw32.sh  grab_deps_mw64.sh  grab_deps_mwclang32.sh  grab_deps_mwclang64.sh  grab_deps_tmux.sh
search/: search_index.json
server/: CMakeLists.txt
server/api/: CMakeLists.txt  dummy.cpp
server/cmake/: CollabVM.cmake
server/core/: CMakeLists.txt  Error.hpp  FundamentalTypes.h  FundamentalTypes.hpp  Panic.cpp  Panic.hpp  Result.hpp  TODO  ThrowException.cpp
server/core/asio/: AsioConfig.hpp  AsioImplTu.cpp  BeastImplTu.cpp  ContextPool.hpp  WithTimeout.hpp
server/core/config/: ConfigStore.cpp  ConfigStore.h  ConfigStore.hpp
server/core/http/: ForwardDeclarations.h  HttpSession.cpp  HttpUtils.h  HttpUtils.hpp  Listener.cpp  NetworkingTSCompatibility.h  NetworkingTSCompatibility.hpp  Route.cpp  Route.hpp  Server.cpp  Server.h  Server.hpp  WebSocketClient.cpp  WebSocketClient.h  WebSocketMessage.cpp  WebSocketMessage.hpp
server/core/util/: CommandLine.cpp
server/host/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  main.cpp
server/host/api/: dummy.cpp
server/proto/http/: CMakeLists.txt  HttpSession.cpp  HttpUtils.h  Listener.cpp  README.md  WebSocketClient.cpp  WebSocketClient.h  WebSocketMessage.cpp  WebSocketMessage.h
server/test/: CMakeLists.txt  Collab3TestExtensions.hpp  main.cpp
server/test/core/: ConfigStore.cpp
src/: AgentProtocol.h  Base64.h  BinaryResources.h  CMakeLists.txt  Chat.h  CollabVM.cpp  CollabVM.h  CollabVMUser.h  GuacBroadcastSocket.cpp  GuacBroadcastSocket.h  GuacClient.cpp  GuacClient.h  GuacInstructionParser.cpp  GuacInstructionParser.h  GuacSocket.cpp  GuacSocket.h  GuacUser.cpp  GuacUser.h  GuacVNCClient.cpp  GuacVNCClient.h  GuacWebSocket.cpp  GuacWebSocket.h  Main.cpp  StackTrace.hpp  UploadInfo.h  UserList.h  asio_implementation.cpp  beast_implementation.cpp  cairo_jpg.c  cairo_jpg.h
src/Database/: Config.h  Database.cpp  Database.h  VMSettings.h
src/Sockets/: AgentClient.cpp  AgentClient.h  LocalSocketClient-Unix.hpp  LocalSocketClient-Win.hpp  LocalSocketClient.h  QMPClient.cpp  QMPClient.h  SocketClient.h  TCPSocketClient.h
src/VMControllers/: QEMUController.cpp  QEMUController.h  QMP.cpp  QMP.h  VMController.cpp  VMController.cpp.bak  VMController.h  VMController.h.bak
src/collab/: CMakeLists.txt  dummy.cpp
src/core/: CMakeLists.txt  PluginManager.cpp  VncHack.cpp  VncHack.h
src/core/util/: CommandLine.cpp
src/guacamole/: CMakeLists.txt  client.cpp  config.h  error.cpp  guac_cursor.cpp  guac_cursor.h  guac_display.h  guac_dot_cursor.cpp  guac_dot_cursor.h  guac_pointer_cursor.cpp  guac_pointer_cursor.h  guac_string.cpp  guac_surface.cpp  id.cpp  id.h  protocol.cpp  protocol.h  socket-fntypes.h  socket-nest.cpp  socket.cpp  socket.h  timestamp.cpp  user-fntypes.h  user-handlers.h  user.cpp
src/guacamole/vnc/: auth.cpp  client.h  clipboard.cpp  clipboard.h  display.cpp  log.cpp  settings.h  vnc.cpp.backup
src/main/: Arguments.cpp  Arguments.h  CMakeLists.txt  main.cpp
src/plugincommon/: AbiImplementation.cpp  CMakeLists.txt  README.md
src/plugins/vmcontrollers/qemu/vmrun/: README.md
src/proto/: CMakeLists.txt
src/proto/http/: Client.cpp  HttpSession.cpp  HttpUtils.h  Listener.cpp  Message.cpp  Server.cpp
src/proto/websocket/: Client.cpp  HttpSession.cpp  HttpUtils.h  Listener.cpp  Message.cpp  Server.cpp
src/sampleplugins/: CMakeLists.txt
src/sampleplugins/helloworld/: CMakeLists.txt  main.cpp
src/scratch/: StackTrace.hpp
src/util/: ChildProcess.cpp  ChildProcess.h  ChildProcessTest.cpp  CommandLine.cpp  CommandLine.h
src/websocket/: BeastImplementation.cpp  CMakeLists.txt  Client.cpp  HttpSession.cpp  HttpUtils.h  Listener.cpp  Server.cpp
src/websocketmm/: CMakeLists.txt  fwd.h  http_util.cpp  http_util.h  listener.cpp  listener.h  server.cpp  server.h  websocket_user.cpp  websocket_user.h
src/websocketmm/beast/: beast.h  net.h
usage/: index.html
webapp/: README.md  package.json
(+52 files in other folders)
